# J-Docu-Chat

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  deployment_instructions.md  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  chat.py  health.py  knowledge_base.py  upload.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  chat_service.py  document_processor.py  kb_manager.py  langgraph_workflow.py  vector_store.py
frontend/: .eslintrc.json  .prettierrc  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.jsx
frontend/src/components/: ChatWindow.jsx  FileDropzone.jsx  MessageBubble.jsx  Sidebar.jsx
frontend/src/hooks/: useChat.js  useTypewriter.js
frontend/src/pages/: Dashboard.jsx  Landing.jsx
frontend/src/types/: index.js
frontend/src/utils/: api.js
